# ECSEngine

./: CMakeLists.txt  Components.hpp  LICENSE  README.md  Systems.hpp  Vector3.hpp  main.cpp
engine/: CMakeLists.txt  World.cpp  World.hpp  WorldImplementation.tpp
engine/Components/: ComponentManager.cpp  ComponentManager.hpp
engine/Core/: Archetype.cpp  Constants.hpp  EntityManager.cpp  Error.hpp  Structs.cpp  Structs.hpp  SystemManager.cpp  SystemManager.hpp
engine/Entities/: Archetype.cpp  Archetype.hpp  EntityManager.cpp  EntityManager.hpp  EntityQuery.cpp  EntityQuery.hpp  EntityQueryGeneric.hpp
engine/Entities/EntityQuery/: EntityQuery.cpp  EntityQuery.hpp  EntityQueryGeneric.hpp  Implementation.hpp
engine/EntityQuery/: EntityQuery.cpp  EntityQuery.hpp  EntityQueryGeneric.hpp  Implementation.tpp
engine/Interface/: World.cpp  World.hpp  WorldImplementation.tpp
include/Engine/Core/: ComponentManager.hpp
include/Engine/Core/Base/: Structs.hpp
include/Engine/ECS/: Archetype.hpp  Components.hpp  EntityManager.hpp
include/Engine/EntityQuery/: EntityQuery.hpp
include/Engine/Graphics/: Renderer.hpp  ShaderProgram.hpp  Texture.hpp
include/Engine/Interface/: World.hpp  WorldImplementation.tpp
include/Engine/Math/: Float2.hpp  Float3.hpp  Float4.hpp  Float4x4.hpp  FloatX.hpp  Math.hpp
include/Engine/World/: Systems.hpp  World.hpp
include/Engine/ressources/shaders/: default.frag  default.vert
lib/include/: glad.h
src/: CMakeLists.txt
src/Core/: Archetype.cpp  ComponentManager.cpp  EntityManager.cpp  EntityManager.hpp  SystemManager.cpp
src/Core/Base/: Structs.cpp  Structs.hpp
src/ECS/: Archetype.cpp  ComponentManager.cpp  EntityManager.cpp  SystemManager.cpp
src/ECS/Base/: Structs.cpp
src/EntityQuery/: EntityQuery.cpp
src/Graphics/: Renderer.cpp  ShaderProgram.cpp  ShaderProgram.hpp  Texture.cpp  glad.c  main.cpp  stb_image.cpp
src/Interface/: World.cpp  World.hpp
src/Math/: Float2.cpp  Float3.cpp  Float4.cpp  Float4x4.cpp
src/World/: Systems.cpp  World.cpp
test/: Components.hpp  main.cpp
test/AccelerationSimulation/: Components.hpp  Systems.hpp  main.cpp
test/Rendering/: CMakeLists.txt  Systems.hpp  main.cpp
